# Ember

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LOGBOOK.md  Pipfile  README.md  build.sh  dockerfile
cmake/: ember-config.cmake.in
include/: graph.h
include/ember/: README.md  ops.h  tensor.h  tensor_snapshot.h  version.h.in
include/ember/autograd/: README.md  accumulator.h  context.h  edge.h  engine.h  node.h
include/ember/ops/: README.md  add.h  div.h  exp.h  matmul.h  mul.h  sub.h  utils.h
src/ember/: README.md  tensor.cpp  tensor_snapshot.cpp
src/ember/autograd/: accumulator.cpp  context.cpp  edge.cpp  engine.cpp
src/ember/ops/: add.cpp  div.cpp  exp.cpp  matmul.cpp  mul.cpp  sub.cpp  utils.cpp
tests/: test_graph.cpp
tests/ember/: test_readme.cpp  test_tensor.cpp
tests/ember/ops/: test_add.cpp  test_div.cpp  test_exp.cpp  test_matmul.cpp  test_mul.cpp  test_sub.cpp
